TODO 25.10: generate configuration documentation